# AlkOS

./: .clangd  .concat.conf  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  failing_tests.txt  last_test_output.md  logging-contract.md
alkos/: CMakeLists.txt
alkos/cmake/: RuntimeHelpers.cmake  SourceHelpers.cmake  ValidationHelpers.cmake
alkos/kernel/: CMakeLists.txt
alkos/kernel/abi/: acpi.hpp  acpi_controller.hpp  constants.hpp  core.hpp  debug_terminal.hpp  interrupts.hpp  memory_manager.hpp  panic.hpp  pre_kernel_init.hpp  spinlock.hpp  terminal.hpp  time.hpp  timers.hpp
alkos/kernel/hal/: acpi_controller.hpp  constants.hpp  core.hpp  debug_terminal.hpp  devnote.md  interrupts.hpp  memory_manager.hpp  qemu.hpp  spinlock.hpp  terminal.hpp  timers.hpp  validation.cpp
alkos/kernel/include/: bit.hpp  boot_args.cpp  boot_args.hpp  concepts.hpp  daytime.hpp  defines.hpp  init.hpp  kernel_args.cpp  kernel_args.hpp  loader64_main.hpp  temporary_file.hpp  timing.hpp  todo.hpp  trace.cpp  trace.hpp  trace_framework.hpp  trace_framework.tpp
alkos/kernel/src/: boot_args.cpp  cores.cpp  daytime.cpp  global_state.cpp  hardware.cpp  init.cpp  interrupts.cpp  kernel.cpp  libc_backend.cpp  memory.cpp  system_time.cpp  timing.cpp  trace.cpp  trace_framework.hpp  vmm.cpp
alkos/kernel/test/: aligned_membuffer_tests.cpp  allocators_test.cpp  array_tests.cpp  asserts_tests.cpp  atomic.cpp  atomic_test.cpp  bit_array_test.cpp  bit_test.cpp  bitmap_pmm_test.cpp  buddy_pmm_test.cpp  ctype_test.cpp  cxx_mutex.cpp  cxx_tests.cpp  cyclic_allocator.cpp  expected.cpp  expected_test.cpp  functional_test.cpp  hash_maps_test.cpp  intervals_tests.cpp  limits_test.cpp  manual_tests.cpp  mem_test.cpp  multi_array_tests.cpp  optional.cpp  page_fault_handler_test.cpp  page_fault_handler_tests.cpp  paths_test.cpp  span_test.cpp  spinlock.cpp  stack_struct_test.cpp  stdio_test.cpp  string_test.cpp  string_view_test.cpp  template_lib_test.cpp  test_module.cpp  test_structs.hpp  tests.cpp  tuple_test.cpp  type_traits_test.cpp
alkos/libc/: CMakeLists.txt
alkos/libc/abi/: platform.h
alkos/libc/cxx/: cxx.cpp
alkos/libc/include/: assert.h  ctype.h  defines.h  libssp.h  math.h  memory.h  stdio.h  stdlib.h  string.h  time.h  todo.h  types.h
alkos/libc/internal/: time_internal.cpp  time_internal.hpp
alkos/libc/io/: snprintf.cpp
alkos/libc/libssp/: libssp.cpp
alkos/libc/math/: math.cpp
alkos/libc/memory/: memory.cpp
alkos/libc/string/: string.cpp
alkos/libc/time/: asctime.cpp  ctime.cpp  gmtime.cpp  localtime.cpp  mktime.cpp  strftime.cpp  time.cpp  time_ext.cpp  time_syscalls.cpp
alkos/libc/ubsan/: ubsan.cpp
alkos/toolchains/: x86_64-conf.cmake  x86_64-flags.cmake
kernel/: CMakeLists.txt
kernel/arch/x86_64/: CMakeLists.txt
kernel/src/: boot_args.cpp  boot_args.hpp  constants.hpp  cores.cpp  global_state.cpp  init.cpp  interrupts.cpp  kernel.cpp  libc_backend.cpp  macros.hpp  system_time.cpp  timing.cpp  todo.hpp  trace.cpp  trace_framework.hpp  trace_framework.tpp  types.hpp  vfs.hpp
kernel/src/acpi/: acpi.cpp  acpi.hpp  acpi.tpp  acpi_battery.hpp  acpi_cpu.hpp  acpi_device.hpp  acpi_interrupt.hpp  acpi_power.cpp  acpi_power.hpp  acpi_tables.hpp  acpi_tables.tpp  acpi_thermal.hpp  osl.cpp  osl.tpp
kernel/src/demos/: donut.hpp
kernel/src/fs/: costants.hpp  file_descriptor.cpp  file_descriptor.hpp  vfs_stream.cpp  vfs_stream.hpp
kernel/src/graphics/: color.hpp  geometry.hpp  native_pixel.hpp  painter.cpp  painter.hpp  painter.tpp  surface.hpp
kernel/src/hal/: acpi_controller.hpp  boot_args.hpp  constants.hpp  core.hpp  debug.hpp  debug_terminal.hpp  devnote.md  interrupt_params.hpp  interrupts.hpp  intr_parser.hpp  io.hpp  mmu.hpp  panic.hpp  qemu.hpp  scheduling.hpp  spinlock.hpp  sync.hpp  tasks.hpp  terminal.hpp  timers.hpp  tlb.hpp  types.hpp
kernel/src/hardware/: clock_infra.hpp  core_controller.hpp  core_local.cpp  core_local.hpp  core_mask.hpp  cores.hpp  event_clock_infra.hpp  interrupt_driver.hpp  interupts.hpp
kernel/src/interrupts/: interrupt_types.hpp  interrupts.cpp  interupts.hpp  logical_interrupt_table.hpp  logical_interrupt_table.tpp
kernel/src/io/: error.hpp  multiplexer.hpp  pipe.hpp  port.hpp  register.hpp  stream.hpp  types.hpp
kernel/src/mem/: allocators.hpp  cyclic_allocator.hpp  error.hpp  heap.cpp  heap.hpp  page.hpp  page_meta.hpp  page_meta_table.hpp  types.hpp
kernel/src/modules/: global_state.hpp  global_state_constants.hpp  hardware.cpp  hardware.hpp  helpers.hpp  input.hpp  memory.cpp  memory.hpp  scheduling.hpp  timing.hpp  timing_constants.hpp  vfs.cpp  vfs.hpp  video.cpp  video.hpp  window.cpp  window.hpp
kernel/src/scheduling/: error.hpp  kworker.cpp  kworker.hpp  local_lock.hpp  policy.hpp  process.hpp  processes.cpp  processes.hpp  scheduler.cpp  scheduler.hpp  scheduler_lock.hpp  (+7 more)
kernel/test/: array_tests.cpp  asserts_tests.cpp  atomic_cyclic_buffer_test.cpp  atomic_stack_test.cpp  atomic_test.cpp  bit_array_test.cpp  bit_test.cpp  bitfield_test.cpp  bitmap_pmm_test.cpp  buddy_pmm_test.cpp  concepts_tests.cpp  critbit_tree_test.cpp  ctype_test.cpp  cxx_mutex.cpp  cxx_tests.cpp  cxx_virtual_test.cpp  cyclic_allocator.cpp  expected_test.cpp  functional_test.cpp  hash_maps_test.cpp  integral_storage_test.cpp  interrupt_test.cpp  intervals_tests.cpp  limits_test.cpp  linked_list_test.cpp  lru_cache_tests.cpp  manual_tests.cpp  math_test.cpp  mem_page_test.cpp  mem_test.cpp  mmu_test.cpp  optional.cpp  page_fault_handler_test.cpp  page_meta_table_test.cpp  rb_test.cpp  ref_count_test.cpp  slab_efficiency_test.cpp  slab_test.cpp  smart_tagged_ptr_test.cpp  span_test.cpp  (+16 more)
libs/libc/: CMakeLists.txt
libs/libcontainers/: CMakeLists.txt
libs/libcpp/: CMakeLists.txt
libs/libgraphics/: CMakeLists.txt
libs/libmeta/: CMakeLists.txt
libs/libtemplate/: CMakeLists.txt
tests/host/: CMakeLists.txt  README.md  main.cpp  test_circular_buffer.cpp
tests/libcpp_mocks/: CMakeLists.txt  README.md  algorithm.hpp  array.hpp  atomic.hpp  defines.hpp  span.hpp  types.hpp
userspace/: CMakeLists.txt  crt0.nasm
(+1379 files in other folders)
